--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,15 +1,18 @@
 .intro__list {
+    margin: 0;
     padding: 0;
-  list-style: none;
+    list-style: none;
 
-  
-font-size: 12px;
-line-height: 18px;
-font-style: normal;
-font-weight: 400;
-font-weight: bold;
 
-/* letter-spacing: 0em; */
-/* text-align: left; */
+    font-size: 12px;
+    line-height: 18px;
+    font-style: normal;
+    font-weight: 400;
+    font-weight: bold;
+    grid-column-start: 2;
+    grid-row-start: 3;
+    /* background-color: thistle; */
+    /* letter-spacing: 0em; */
+    /* text-align: left; */
 
 }
