--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,12 +1,17 @@
 .intro__text {
-  align-self: start;
-    
-    font-size: 16px;
+  /* align-self: start; */
+  margin: 0;
+  padding: 40px 0 33px;
   font-style: normal;
   font-weight: 400;
+  font-size: 16px;
   line-height: 26px;
-  /* letter-spacing: 0em; */
   text-align: left;
+  grid-column-start: 2;
+  grid-row-start: 2;
+  /* background-color: thistle; */
+  /* letter-spacing: 0em; */
+/* grid-row-end: 6; */
   
  
 
