--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,9 +1,26 @@
 .intro__title {
-   
+    margin: 0;
+    padding: 0;
+    font-style: normal;
+    font-weight: 900;
     font-size: 54px;
-font-style: normal;
-font-weight: 900;
-line-height: 58px;
+line-height: 1.07x;
+grid-column-start: 2;
+/* background-color: thistle; */
 /* letter-spacing: 0em; */
 /* text-align: left; */
 }
+
+@media screen and (max-width: 768px) {
+    .intro__title {
+      font-size: 54px;
+    }
+  }
+  
+  @media screen and (max-width: 320px) {
+    .intro__title {
+      font-size: 32px;
+      line-height: 1.09;
+      margin: 64px 16px 40px;
+    }
+  }
