--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,5 @@
 .lead__title {
-    margin: 56px 0;
+    margin: 0;
     padding: 0;
     font-size: 96px;
     line-height: 1.04;
@@ -10,19 +10,7 @@
     max-width: 720px;
 }
 
-@media screen and (max-width: 1024px) {
-    .lead__title {
-        margin: 48px 0;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .lead__title {
-        margin: 48px 0;
-    }
-}
-
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 703px) {
     .lead__title {
         font-size: 40px;
         line-height: 1.1;
