--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,7 +6,7 @@
     display: grid;
     grid-template-columns: 1fr minmax(690px, 1fr) 2.986fr;
     grid-template-rows: 1fr minmax(min-content, max-content);
-    gap: 1px;
+    /* gap: 1px; */
     max-width: 1280px;
     /* border: 1px solid green; */
     
