--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,13 +1,50 @@
 .photo-grid {
-        grid-area: photo-grid;
-    display: grid;
+  grid-area: photo-grid;
+  display: grid;
+  grid-template-columns: repeat(4, 284px);
+  max-width: 1280px;
+  grid-gap: 16px;
+  padding: 0 0 92px;
   /* grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr; */
-  max-width: 1280px;
-  
-  grid-template-rows: repeat(2, 213px);
-  grid-template-columns: repeat(4, 284px);
+  /* grid-template-rows: repeat(2, 213px); */
   /* grid-auto-rows: 284px; */
-  gap: 16px;
-  
+}
+
+@media screen and (max-width: 1210px) {
+  .photo-grid {
+    grid-gap: 14px;
+    grid-template-columns: repeat(3, 300px);
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .photo-grid {
+    grid-gap: 14px;
+    grid-template-columns: repeat(3, 300px);
+  }
+}
+
+@media screen and (max-width: 940px) {
+  .photo-grid {
+    grid-gap: 16px;
+    grid-template-columns: repeat(2, 352px);
+    padding: 0 24px 88px;
+  }
+}
+
+@media screen and (max-width: 751px) {
+  .photo-grid {
+    grid-gap: 12px;
+    grid-template-columns: 1fr;
+    padding: 0 16px 66px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .photo-grid {
+    grid-gap: 12px;
+    grid-template-columns: 288px;
+    padding: 0 16px 66px;
+  }
 }
