--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -3,7 +3,7 @@
   list-style: none;
   display: flex;
   align-items: flex-end;
-  border: chartreuse 1px solid;
+  /* border: chartreuse 1px solid; */
   margin-bottom: 6px;
   margin-top: 18px;
   
