--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,9 +1,13 @@
 .cover__link {
-    background-color: rgb(16%, 17%, 18%, .3);
     text-decoration: none;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    /* width: 100%; */
+    max-height: 740px;
+    height: 100%;
     /* justify-content: top; */
     /* align-content: center;
     box-sizing: border-box;
@@ -12,10 +16,22 @@
     /* padding: 0 48px 92px; */
     /* width: 100%; */
     /* height: 100%; */
-        /* margin: 0;
+    /* margin: 0;
     padding: 0; */
 }
 
-.cover__link:hover {
+.cover__link::before {
+    content: "";
+    background-color: rgb(16%, 17%, 18%, .3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.cover__link:hover::before {
     background-color: rgb(16%, 17%, 18%, .8);
 }
