--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,4 @@
 .cover__subtitle {
-    font-family: Inter;
     font-size: 18px;
     line-height: 22px;
     font-style: normal;
@@ -7,27 +6,27 @@
     letter-spacing: 0em;
     text-align: center;
     color: #FFFFFF;
-    text-decoration-line: none;
-    text-decoration: none;
-    max-width: 360px;
-    margin: 32px auto 0;
-
+    width: 360px;
+    margin: 32px 0 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1120px) {
     .cover__subtitle {
-        max-width:
+       
+        max-width: 360px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
     .cover__subtitle {
-        max-width:
+        max-width: 360px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 550px) {
     .cover__subtitle {
-        max-width:
+        max-width: 360px;
+        font-size: 14px;
+        line-height: 16px;
     }
 }
