--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,28 +5,17 @@
     line-height: 76px;
     letter-spacing: 0em;
     text-align: center;
-    margin: 254px auto 32px;
+    margin: 0 0 0;
     color: #FFFFFF;
     max-width: 560px;
     text-decoration: none;
 }
-/* 
-@media screen and (max-width: 1024px) {
-    .cover__title {
-        margin: 195px auto 32px;
-    }
-}
 
-@media screen and (max-width: 768px) {
+  @media screen and (max-width: 550px) {
     .cover__title {
-        margin: 115px auto 32px;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .cover__title {
-        margin: 33px auto 16px;
-       font-size: 32px;
+        margin: 0 0 0;
+        font-size: 32px;
         line-height: 35px;
+        max-width: 288px;
     }
-} */
+  }
