--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,40 +1,47 @@
 .cover {
-    /* grid-area: cover; */
-     border: chartreuse solid 1px;
+    border: chartreuse solid 1px;
+    box-sizing: border-box;
     background-image: url(../../../images/cover-trains.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    grid-area: cover;
-    display: flex;
-    /* align-items: stretch; */
     background-size: cover;
-    width: 1184px;
-    height: 740px; 
-    
-    /* margin:  0 48px 92px; */
-    /* width: 100%; */
-    /* box-sizing: border-box;
-    padding: 0 48px 92px; */
-    /* max-width: 1184px; */
-    /* padding: 0;
-    margin: 0; */
-    /* width: 100%; */
-}
-/* 
-@media screen and (max-width: 1024px) {
-    .cover {
-        padding: 0 0 92px;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    min-height: 740px;
+    text-decoration: none;
+    position: relative;
+        
+
+    /* min-height: 740px;
+    max-width: 1280px; */
+    /* grid-area: cover;
+    width: 100%;
+    align-items: stretch;
+    background-repeat: no-repeat;
+    background-position: center; */
 }
 
-@media screen and (max-width: 768px) {
-    .cover {
-        padding: 0 0 88px;
+    @media screen and (max-width: 1120px) {
+        .cover {
+            min-height: 640px;
+        }
     }
-}
 
-@media screen and (max-width: 320px) {
-    .cover {
-        padding: 0 0 64px;
+    @media screen and (max-width: 900px) {
+        .cover {
+            min-height: 480px;
+        }
     }
-} */
+
+    @media screen and (max-width: 550px) {
+        .cover {
+            min-height: 245px;
+        }
+    }
+
+    @media screen and (max-width: 320px) {
+        .cover {
+            min-height: 200px;
+        }
+    }
