--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,8 +5,9 @@
   /* margin: 0 48px 0; */
   /* width: calc(100%*1184/1280); */
   /* max-width: 1184px; */
+ 
+  /* border: solid 1px darkgreen; */
   max-width: 1280px;
-  border: solid 1px darkgreen;
   display: flex;
   justify-content: space-between;
   box-sizing: border-box;
