--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,16 @@
 .lead__image {
     width: 100%;
+    margin: 0;
 }
+
+@media screen and (max-width: 360px) {
+    .lead__image {
+        width: 320px;
+    }
+  }
+
+  @media screen and (max-width: 319px) {
+    .lead__image {
+        max-width: 280px;
+    }
+  }
