--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,9 +10,38 @@
     max-width: 720px;
 }
 
-@media screen and (max-width: 703px) {
+/* @media screen and (max-width: 703px) {
     .lead__title {
         font-size: 40px;
         line-height: 1.1;
     }
-}
+} */
+
+
+
+@media screen and (max-width: 768px) {
+    .lead__title {
+      margin-left: 24px;
+      margin-right: 24px;
+    }
+  }
+  
+  @media screen and (max-width: 740px) {
+    .lead__title {
+      font-size: 55px;
+    }
+  }
+  
+  @media screen and (max-width: 460px) {
+    .lead__title {
+      font-size: 40px;
+      line-height: 1.1;
+    }
+  }
+  
+  @media screen and (max-width: 320px) {
+    .lead__title {
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+  }
