--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,30 +1,34 @@
 .page {
-  font-family: 'Inter', Arial, sans-serif;
   background-color: #2A2C2F;
+  font-family: 'Inter', Arial, sans-serif;
+  max-width: 1280px;
+  min-width: 320px;
   text-rendering: optimizeLegibility;
-  padding: 28px 0 24px;
-  width: 100%;
+  padding: 28px 48px 24px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin: 0 auto;
+  /* align-items: center; */
   border: turquoise 1px solid;
   /* max-width: 1280px; */
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
+
 }
-@media screen and (max-width: 1024px) {
-  .root {
+
+@media screen and (max-width: 1120px) {
+  .page {
     padding: 28px 0 24px;
   }
 }
 
-@media screen and (max-width: 768px) {
-  .root {
+@media screen and (max-width: 900px) {
+  .page {
     padding: 28px 0 24px;
   }
 }
 
-@media screen and (max-width: 320px) {
-  .root {
+@media screen and (max-width: 550px) {
+  .page {
     padding: 16px 0 24px;
   }
 }
