--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,4 @@
 .cover {
-    border: chartreuse solid 1px;
     box-sizing: border-box;
     background-image: url(../../../images/cover-trains.jpg);
     background-size: cover;
@@ -11,8 +10,9 @@
     min-height: 740px;
     text-decoration: none;
     position: relative;
-        
-
+    padding: 12px 0 0;
+    
+    /* border: chartreuse solid 1px; */
     /* min-height: 740px;
     max-width: 1280px; */
     /* grid-area: cover;
