--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,7 +5,7 @@
     max-width: 1280px;
     column-gap: 40px;
     row-gap: 48px;
-    padding: 0 148px 92px;
+    padding: 0 100px 80px;
     color: #FFFFFF;
     /* grid-template-columns: 1fr 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr; */
@@ -13,24 +13,27 @@
     /* grid-auto-rows: 284px; */
 }
 
+.place:last-child {
+    padding-bottom: 92px;
+}
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1120px) {
     .place {
         grid-template-columns: fit-content(440px) 1fr;
-        padding: 0 48px 92px;
+        padding: 0 48px 80px;
         column-gap: 32px;
             }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
     .place {
         grid-template-columns: fit-content(340px) 1fr;
-        padding: 0 24px 90px;
+        padding: 0 24px 80px;
         column-gap: 28px;
             }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 550px) {
     .place {
         grid-template-columns: repeat(auto-fill minmax(320px 1fr));
     }
