--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,3 +1,35 @@
 .footer__links {
+    margin: 0;
+    padding: 0;
+    display: inline-grid;
+    grid-template-columns: repeat(5, min-content);
+    grid-column-gap: 18px;
     text-decoration: none;
+    color: #FFFFFF;
+    list-style-type: none;
+
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+
+}
+
+@media screen and (max-width: 550px) {
+    .header {
+        grid-template-rows: repeat(5, min-content);
+        grid-template-columns: repeat(1, min-content);
+        grid-row-gap: 32px;
+        font-family: Inter;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+
+    }
 }
