--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,15 +1,16 @@
 .footer {
-    /* display: inline-grid; */
-    grid-template-columns: repeat(6, 1fr);
-    grid-row-gap: 18px;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 18px;
     text-decoration: none;
-
-    font-family: Inter;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 18px;
     letter-spacing: 0em;
     text-align: left;
-
+    color: #FFFFFF;
+    padding: 94px 0 0;
 }
