--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,22 +1,21 @@
 .photo-grid {
-    display: grid;
+  display: grid;
   grid-template-columns: repeat(4, 284px);
-  max-width: 1280px;
   grid-gap: 16px;
   padding: 0 0 92px;
-  /* margin: 0 auto;
-  justify-content: center;
-  align-items: center; */
-  /* grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr; */
-  /* grid-template-rows: repeat(2, 213px); */
-  /* grid-auto-rows: 284px; */
 }
 
-@media screen and (max-width: 1210px) {
+@media screen and (max-width: 1279px) {
+  .photo-grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media screen and (max-width: 1120px) {
   .photo-grid {
     grid-gap: 14px;
     grid-template-columns: repeat(3, 300px);
+    padding: 0 48px 92px;
   }
 }
 
@@ -27,15 +26,22 @@
   }
 }
 
-@media screen and (max-width: 940px) {
+@media screen and (max-width: 1023px) {
   .photo-grid {
-    grid-gap: 16px;
-    grid-template-columns: repeat(2, 352px);
-    padding: 0 0 88px;
+    grid-gap: 14px;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media screen and (max-width: 751px) {
+@media screen and (max-width: 900px) {
+  .photo-grid {
+    grid-gap: 16px;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 24px 88px;
+  }
+}
+
+@media screen and (max-width: 550px) {
   .photo-grid {
     grid-gap: 12px;
     grid-template-columns: 1fr;
@@ -43,10 +49,3 @@
   }
 }
 
-@media screen and (max-width: 400px) {
-  .photo-grid {
-    grid-gap: 12px;
-    grid-template-columns: 288px;
-    padding: 0 16px 66px;
-  }
-}
