--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -11,3 +11,11 @@ color: #AAAAAA;
 align-self: end;
 min-width: 288px;
 }
+
+@media screen and (max-width: 550px) {
+    .place__url {
+      padding-left: 16px;
+      padding-right: 16px;
+      margin: 0 0 12px;
+    }
+  }
