--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -9,3 +9,10 @@
 .place__website:hover {
     opacity: 0.8;
 }
+
+@media screen and (max-width: 550px) {
+    .place__website {
+      padding-left: 16px;
+      padding-right: 16px;
+    }
+  }
