--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -21,6 +21,6 @@ grid-column-start: 2;
     .intro__title {
       font-size: 32px;
       line-height: 1.09;
-      margin: 64px 16px 40px;
+      margin: 0;
     }
   }
