--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -61,8 +61,8 @@
 @media screen and (max-width: 320px) {
     .lead__subtitle {
         font-size: 16px;
-        margin-left: 16px;
-
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
