--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,6 +6,7 @@
     font-weight: 900;
     line-height: 76px;
     letter-spacing: 0em;
+    /* display: block; */
     /* text-align: left; */
 }
 
@@ -22,6 +23,14 @@
         font-size: 42px;
         line-height: 1.12;
         padding: 0;
+        max-width: 330px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .place__title {
+        padding-left: 16px;
+        padding-right: 16px;
     }
 }
 
@@ -29,7 +38,6 @@
     .place__title {
         font-size: 32px;
         line-height: 1.09;
-        padding: 0;
+
     }
 }
-
