--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -14,9 +14,19 @@
   margin-bottom: 0;
 }
 
+@media screen and (max-width: 1120px) {
+  .place__paragraph {
+    font-size: 55px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 29.34px;
+    text-align: left;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .place__paragraph {
-      font-size: 16px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
