--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,18 +1,20 @@
 .footer__copyright {
     font-size: 14px;
+    line-height: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 16px;
     letter-spacing: 0em;
     margin: 0;
     padding: 0;
-    justify-self: self-end;
+    margin-left: auto;
+    /* justify-self: self-end; */
 }
 
-@media screen and (max-height: 767px) {
+@media screen and (max-width: 767px) {
     .footer__copyright {
         margin-top: 48px;
-        justify-self: self-start;
         margin-left: 16px;
+        margin-right: auto;
+        margin-left: 0;
     }
 }
