--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -16,7 +16,7 @@
 
 @media screen and (max-width: 1120px) {
   .place__paragraph {
-    font-size: 55px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 29.34px;
@@ -24,7 +24,7 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 900px) {
   .place__paragraph {
     font-size: 16px;
     font-style: normal;
@@ -37,12 +37,12 @@
 }
 
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .place__paragraph {
     font-size: 16px;
     line-height: 26px;
   }
-}
+} */
 
 @media screen and (max-width: 550px) {
   .place__paragraph {
