--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -31,7 +31,9 @@
 
 @media screen and (max-width: 767px) {
     .footer {
-        padding: 64px 0 0;
+        padding: 64px 0 0  16px;
         grid-template-columns: repeat(1, 1fr);
+
     }
 }
+
