--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,16 +1,15 @@
 .page {
-  background-color: #2A2C2F;
-  font-family: 'Inter', Arial, sans-serif;
-  max-width: 1280px;
-  min-width: 320px;
-  text-rendering: optimizeLegibility;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  border: turquoise 1px solid;
-  box-sizing: border-box;
-  padding: 28px 48px 24px;
-  /* align-items: center; */
+  background-color      : #2A2C2F;
+  font-family           : 'Inter', Arial, sans-serif;
+  max-width             : 1280px;
+  min-width             : 50px;
+  text-rendering        : optimizeLegibility;
+  display               : flex;
+  flex-direction        : column;
+  margin                : 0 auto;
+  box-sizing            : border-box;
+  padding               : 28px 48px 24px;
+  -webkit-font-smoothing: antialiased;
 }
 
 @media screen and (max-width: 1120px) {
