--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,13 +1,13 @@
 .place__paragraph {
-  padding: 0;
-  margin: 0 0 26px;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 29px;
+  padding       : 0;
+  margin        : 0 0 26px;
+  font-size     : 18px;
+  font-style    : normal;
+  font-weight   : 400;
+  line-height   : 29px;
   letter-spacing: 0em;
-  text-align: left;
-  box-sizing: border-box;
+  text-align    : left;
+  box-sizing    : border-box;
 }
 
 .place__paragraph:last-child {
@@ -16,37 +16,28 @@
 
 @media screen and (max-width: 1120px) {
   .place__paragraph {
-    font-size: 18px;
-    font-style: normal;
+    font-size  : 18px;
+    font-style : normal;
     font-weight: 400;
     line-height: 29.34px;
-    text-align: left;
+    text-align : left;
   }
 }
 
 @media screen and (max-width: 900px) {
   .place__paragraph {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 26px;
+    font-size     : 16px;
+    font-style    : normal;
+    font-weight   : 400;
+    line-height   : 26px;
     letter-spacing: 0em;
-    text-align: left;
-    border-radius: nullpx;
+    text-align    : left;
   }
 }
 
-
-/* @media screen and (max-width: 768px) {
-  .place__paragraph {
-    font-size: 16px;
-    line-height: 26px;
-  }
-} */
-
 @media screen and (max-width: 550px) {
   .place__paragraph {
-    padding-left: 16px;
-    padding-right: 16px;
+    margin-left : 16px;
+    margin-right: 16px;
   }
 }
