--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,43 +1,37 @@
 .place__title {
-    padding: 0;
-    margin: 0;
-    font-size: 72px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: 76px;
+    padding       : 0;
+    margin        : 0;
+    font-size     : 72px;
+    font-style    : normal;
+    font-weight   : 900;
+    line-height   : 76px;
     letter-spacing: 0em;
-    /* display: block; */
-    /* text-align: left; */
 }
 
 @media screen and (max-width: 960px) {
     .place__title {
-        font-size: 42px;
+        font-size  : 42px;
         line-height: 1.12;
-        padding: 0;
     }
 }
 
 @media screen and (max-width: 950px) {
     .place__title {
-        font-size: 42px;
+        font-size  : 42px;
         line-height: 1.12;
-        padding: 0;
-        max-width: 330px;
     }
 }
 
 @media screen and (max-width: 550px) {
     .place__title {
-        padding-left: 16px;
-        padding-right: 16px;
+        margin-left: 16px;
     }
 }
 
 @media screen and (max-width: 350px) {
     .place__title {
-        font-size: 32px;
+        font-size  : 32px;
         line-height: 1.09;
-
+        display    : inline-grid;
     }
 }
