--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -1,25 +1,20 @@
 .place__url {
-  padding: 0;
-  margin: 0 0 12px;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 12px;
+  padding       : 0;
+  margin        : 0 0 12px;
+  font-size     : 12px;
+  font-style    : normal;
+  font-weight   : 400;
+  line-height   : 12px;
   letter-spacing: 2px;
-  text-align: left;
-  color: #AAAAAA;
-  align-self: end;
-  min-width: 288px;
+  text-align    : left;
+  color         : #AAAAAA;
+  align-self    : end;
   text-transform: uppercase;
-  }
+}
 
 @media screen and (max-width: 550px) {
   .place__url {
-    /* padding-left: 16px;
-    padding-right: 16px; */
     margin: 0 0 12px;
-    min-width: 150px;
+    width : min-content;
   }
 }
-
-
