--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -15,3 +15,10 @@
     padding-right: 16px;
   }
 }
+
+@media screen and (max-width: 370px) {
+  .place__website {
+    padding-left: 16px;
+    padding-right: 0;
+  }
+}
