--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,9 +7,9 @@
   margin-left    : 18px;
 }
 
-
 @media screen and (max-width: 425px) {
   .header__lang-link {
     font-size  : 18px;
     line-height: 1.11;
   }
+}
