--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,7 +6,7 @@
     letter-spacing: 0em;
     text-align: center;
     color: #FFFFFF;
-    width: 360px;
+    max-width: 360px;
     margin: 32px 0 0;
 }
 
