--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,6 +12,8 @@
     text-align: left;
     color: #FFFFFF;
     padding: 94px 0 0;
+    position: relative;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 1120px) {
