--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 0 0 0;
+  padding: 0;
   position: relative;
   box-sizing: border-box;
 }
