--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,12 +1,13 @@
 .intro {
-    grid-area            : intro;
-    color                : #FFFFFF;
-    box-sizing           : border-box;
-    padding              : 92px 0 92px 0;
-    display              : grid;
+    grid-area: intro;
+    color: #FFFFFF;
+    box-sizing: border-box;
+    padding: 92px 0 92px 0;
+    display: grid;
     grid-template-columns: 100px 690px 0;
-    grid-template-rows   : 1fr minmax(min-content, max-content);
-    max-width            : 1280px;
+    grid-template-rows: 1fr minmax(min-content, max-content);
+    position: relative;
+    /* max-width            : 1280px; */
 }
 
 @media screen and (max-width: 1120px) {
@@ -18,13 +19,13 @@
 @media screen and (max-width: 900px) {
     .intro {
         grid-template-columns: 24px minmax(min-content, max-content) 24px;
-        padding              : 88px 0 88px 0;
+        padding: 88px 0 88px 0;
     }
 }
 
 @media screen and (max-width: 550px) {
     .intro {
         grid-template-columns: 16px minmax(min-content, max-content) 16px;
-        padding              : 64px 0 64px 0;
+        padding: 64px 0 64px 0;
     }
 }
