--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,6 +3,8 @@
   grid-template-columns: repeat(4, 284px);
   grid-gap: 16px;
   padding: 0 0 92px;
+  position: relative;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1279px) {
