--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,12 +1,14 @@
 .place {
-    display              : grid;
+    display: grid;
     grid-template-columns: fit-content(460px) fit-content(484px);
-    column-gap           : 40px;
-    row-gap              : 48px;
-    padding              : 0 100px 80px;
-    align-items          : top;
-    justify-content      : center;
-    color                : #FFFFFF;
+    column-gap: 40px;
+    row-gap: 48px;
+    padding: 0 100px 80px;
+    align-items: top;
+    justify-content: center;
+    color: #FFFFFF;
+    position: relative;
+    box-sizing: border-box;
 }
 
 .place:last-child {
@@ -16,23 +18,23 @@
 @media screen and (max-width: 1120px) {
     .place {
         grid-template-columns: fit-content(440px) 1fr;
-        padding              : 0 48px 80px;
-        column-gap           : 32px;
+        padding: 0 48px 80px;
+        column-gap: 32px;
     }
 }
 
 @media screen and (max-width: 900px) {
     .place {
         grid-template-columns: fit-content(340px) 1fr;
-        padding              : 0 24px 73px;
-        column-gap           : 28px;
+        padding: 0 24px 73px;
+        column-gap: 28px;
     }
 }
 
 @media screen and (max-width: 610px) {
     .place {
         grid-template-columns: fit-content(450px);
-        padding              : 0 0 50px;
+        padding: 0 0 50px;
     }
 
     .place:last-child {
