--- a/blocks/whole-page/whole-page.css
+++ b/blocks/whole-page/whole-page.css
@@ -1,7 +1,8 @@
 .whole-page {
-    background-color      : #2A2C2F;
-    display               : flex;
-    flex-direction        : column;
-    margin                : 0 auto;
-    box-sizing            : border-box;
+    background-color: #2A2C2F;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    position: relative;
+    box-sizing: border-box;
     }
