--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,15 +5,16 @@
   line-height: 76px;
   letter-spacing: 0em;
   text-align: center;
-  margin: 0 0 0;
+  margin: 0;
   color: #FFFFFF;
   max-width: 560px;
   text-decoration: none;
+  z-index: 3;
 }
 
 @media screen and (max-width: 550px) {
   .cover__title {
-    margin: 0 0 0;
+    margin: 0;
     font-size: 32px;
     line-height: 35px;
     max-width: 288px;
