--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: 4;
+    z-index: 2;
     max-height: 740px;
     height: 100%;
 }
@@ -15,7 +15,9 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 2;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
     transition: opacity 0.3s ease-in-out;
 }
 
