--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,7 @@
 .cover {
     box-sizing: border-box;
     background-image: url(../../images/cover-trains.jpg);
+    background-position: center;
     background-size: cover;
     display: flex;
     flex-direction: column;
