--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,16 +1,17 @@
 .lead__image {
     width: 100%;
     margin: 0;
+    padding: 0;
 }
 
 @media screen and (max-width: 360px) {
     .lead__image {
-        max-width: 320px;
+        max-width: 300px;
     }
   }
 
   @media screen and (max-width: 319px) {
     .lead__image {
-        max-width: 280px;
+        max-width: 260px;
     }
   }
