--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,7 @@
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__figure/lead__figure.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__list-span/intro__list-span.css);
 @import url(../blocks/intro/__text/intro__text.css);
