--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,34 +1,34 @@
 .cover {
-    box-sizing: border-box;
-    background-image: url(../../images/cover-trains.jpg);
+    box-sizing         : border-box;
+    background-image   : url(../../images/cover-trains.jpg);
     background-position: center;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    min-height: 740px;
-    text-decoration: none;
-    position: relative;
-    padding: 12px 0 0;
+    background-size    : cover;
+    display            : flex;
+    flex-direction     : column;
+    justify-content    : center;
+    align-items        : center;
+    width              : 100%;
+    min-height         : 740px;
+    text-decoration    : none;
+    position           : relative;
+    padding            : 12px 0 0;
 }
 
-@media screen and (max-width: 1120px) {
+@media screen and (max-width: 1024px) {
     .cover {
         min-height: 640px;
     }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 768px) {
     .cover {
         min-height: 480px;
     }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 425px) {
     .cover {
-        min-height: 245px;
+        min-height: 265px;
     }
 }
 
